--- a/stylesheets/scss/variables.scss
+++ b/stylesheets/scss/variables.scss
@@ -2,9 +2,9 @@ $font-stack: 'Source Sans Pro', sans-serif;
 
 // palette
 
-$green: #95f691;
-$darkgreen: darken($green, 20%);
-$verydarkgreen: darken($green, 40%);
+$aqua: #87ffe3;
+$darkaqua: darken($aqua, 20%);
+$verydarkaqua: darken($aqua, 40%);
 
 $blue: #8f80ff;
 $lightblue: lighten($blue, 20%);
