--- a/stylesheets/scss/variables.scss
+++ b/stylesheets/scss/variables.scss
@@ -9,8 +9,8 @@ $verydarkaqua: darken($aqua, 40%);
 $blue: #8f80ff;
 $lightblue: lighten($blue, 20%);
 $lesslightblue: lighten($blue, 15%);
-$darkblue: darken($blue, 50%);
-$verydarkblue: darken($blue, 65%);
+$darkblue: darken($blue, 50%); // #0f0080
+$verydarkblue: darken($blue, 65%); // #060034
 
 //media queries
 
