--- a/stylesheets/scss/homepage.scss
+++ b/stylesheets/scss/homepage.scss
@@ -5,14 +5,10 @@
 /* intro text */
 
 .home-intro {
-  background-color: $verydarkblue;
   .highlight {
-    margin: 0.5rem 0 0 0;
-    padding: 2.5rem 3rem;
     font-size: 2.75rem;
-    line-height: 1.6;
+    line-height: 1.4;
     overflow: hidden;
-    color: white;
     a {
       font-weight: 300;
       color: $blue;
@@ -27,15 +23,14 @@
 
 @include media(medium) {
   .main-content.main-content_home {
+    padding-top: 0;
     border-top: none;
   }
   .home-intro {
     display: block;
     width: 100%;
     .highlight {
-      margin-top: 0;
-      padding: 20px;
-      font-size: 1.75rem;
+      font-size: 2rem;
     }
   }
 }
