--- a/stylesheets/scss/sidebar.scss
+++ b/stylesheets/scss/sidebar.scss
@@ -11,7 +11,7 @@
 }
 
 .sidebar-content {
-  margin: 1rem;
+  margin: 1.25rem 1rem;
 }
 
 .mobile-menu-link {
@@ -37,13 +37,10 @@
 
 .name {
   margin: 0;
-}
-
-.title {
-  margin-top: 0.5rem;
-  font-size: 1rem;
-  font-style: italic;
-  color: $blue;
+  .nav-tem {
+    font-size: 1rem;
+    line-height: 1;
+  }
 }
 
 .nav-ul {
@@ -51,7 +48,10 @@
   list-style: none;
 }
 
-.nav {
+.nav-link {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
   color: $darkblue;
   &.current {
     background-color: $darkaqua;
@@ -81,19 +81,6 @@
     display: none;
     &.active {
       display: block;
-    }
-  }
-
-  .nav {
-    font-size: 1.3rem;
-    line-height: 1.5;
-  }
-
-  .name {
-    line-height: 1;
-    .nav {
-      font-size: 1.7rem;
-      line-height: 0;
     }
   }
 
