--- a/stylesheets/scss/index.scss
+++ b/stylesheets/scss/index.scss
@@ -1,12 +1,11 @@
 @import 'variables';
 @import 'global';
-@import 'sidebar';
-@import 'sidebar';
 @import 'pages';
+@import 'nav';
+@import 'footer';
 @import 'homepage';
-@import 'brain';
+@import 'favorite-things';
 @import 'about';
 @import 'resume';
-@import 'print';
 @import '404';
-@import 'favorite-things';
+@import 'print';
