--- a/stylesheets/scss/homepage.scss
+++ b/stylesheets/scss/homepage.scss
@@ -34,3 +34,31 @@
     }
   }
 }
+
+.home-intro {
+  height: auto;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 1s ease;
+  animation: introSlide 1s forwards;
+  -webkit-animation: introSlide 1s forwards;
+  -moz-animation: introSlide 1s forwards;
+  -o-animation: introSlide 1s forwards;
+}
+
+@keyframes introSlide {
+  0%   { max-height: 0; }
+  100% { max-height: 600px; }
+}
+@-webkit-keyframes introSlide {
+  0%   { max-height: 0; }
+  100% { max-height: 600px; }
+}
+@-moz-keyframes introSlide {
+  0%   { max-height: 0; }
+  100% { max-height: 600px; }
+}
+@-o-keyframes introSlide {
+  0%   { max-height: 0; }
+  100% { max-height: 600px; }
+}
