--- a/stylesheets/scss/pages.scss
+++ b/stylesheets/scss/pages.scss
@@ -37,9 +37,9 @@
 .work-list {
   list-style: none;
   margin: 2rem 0;
-  li{
-    line-height: 2;
-    padding-bottom: 1rem;
+  li {
+    line-height: 1.4;
+    padding-bottom: 1.5rem;
   }
 }
 
@@ -110,4 +110,18 @@
   p {
     padding-bottom: 15px;
   }
+}
+
+/* media queries */
+
+@include media(medium) {
+
+  .large {
+    width: 100%;
+  }
+
+  .top {
+    padding-bottom: 2rem;
+  }
+
 }
