--- a/stylesheets/scss/variables.scss
+++ b/stylesheets/scss/variables.scss
@@ -3,6 +3,7 @@ $font-stack: 'Source Sans Pro', sans-serif;
 // palette
 
 $aqua: #87ffe3;
+$lightaqua: lighten($aqua, 20%);
 $darkaqua: darken($aqua, 20%);
 $verydarkaqua: darken($aqua, 40%);
 
@@ -12,7 +13,69 @@ $lesslightblue: lighten($blue, 15%);
 $darkblue: darken($blue, 50%); // #0f0080
 $verydarkblue: darken($blue, 65%); // #060034
 
-//media queries
+// mixins
+
+@mixin box-shadow-with-animation {
+  border: 2px solid $blue;
+  box-shadow: 14px 14px 0 0 $blue;
+  -webkit-box-shadow: 14px 14px 0 0 $blue;
+  -moz-box-shadow: 14px 14px 0 0 $blue;
+  animation: BoxShadowSlide 0.5s forwards;
+  -webkit-animation: BoxShadowSlide 0.5s forwards;
+  -moz-animation: BoxShadowSlide 0.5s forwards;
+  -o-animation: BoxShadowSlide 0.5s forwards;
+}
+
+@keyframes BoxShadowSlide {
+  0% {
+    box-shadow: 0 0 0 0 $blue;
+    -webkit-box-shadow: 0 0 0 0 $blue;
+    -moz-box-shadow: 0 0 0 0 $blue;
+  }
+  100% {
+    box-shadow: 14px 14px 0 0 $blue;
+    -webkit-box-shadow: 14px 14px 0 0 $blue;
+    -moz-box-shadow: 14px 14px 0 0 $blue;
+  }
+}
+@-webkit-keyframes BoxShadowSlide {
+  0% {
+    box-shadow: 0 0 0 0 $blue;
+    -webkit-box-shadow: 0 0 0 0 $blue;
+    -moz-box-shadow: 0 0 0 0 $blue;
+  }
+  100% {
+    box-shadow: 14px 14px 0 0 $blue;
+    -webkit-box-shadow: 14px 14px 0 0 $blue;
+    -moz-box-shadow: 14px 14px 0 0 $blue;
+  }
+}
+@-moz-keyframes BoxShadowSlide {
+  0% {
+    box-shadow: 0 0 0 0 $blue;
+    -webkit-box-shadow: 0 0 0 0 $blue;
+    -moz-box-shadow: 0 0 0 0 $blue;
+  }
+  100% {
+    box-shadow: 14px 14px 0 0 $blue;
+    -webkit-box-shadow: 14px 14px 0 0 $blue;
+    -moz-box-shadow: 14px 14px 0 0 $blue;
+  }
+}
+@-o-keyframes BoxShadowSlide {
+  0% {
+    box-shadow: 0 0 0 0 $blue;
+    -webkit-box-shadow: 0 0 0 0 $blue;
+    -moz-box-shadow: 0 0 0 0 $blue;
+  }
+  100% {
+    box-shadow: 14px 14px 0 0 $blue;
+    -webkit-box-shadow: 14px 14px 0 0 $blue;
+    -moz-box-shadow: 14px 14px 0 0 $blue;
+  }
+}
+
+// media queries
 
 @mixin media($point) {
   @if $point == small {
