--- a/_scss/base.scss
+++ b/_scss/base.scss
@@ -50,6 +50,9 @@ body {
   font: 1rem/1.5 $font-stack;
   font-weight: 400;
   color: $darkblue;
+  @include media(medium) {
+    margin-top: 0;
+  }
 }
 
 ::-moz-selection {
@@ -84,19 +87,27 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 2.75rem;
 }
 
 h2 {
-  font-size: 1.8rem;
+  font-size: 2.5rem;
 }
 
 h3 {
-  font-size: 1.7rem;
+  font-size: 2.25rem;
 }
 
 h4 {
- font-size: 1.6rem;
+ font-size: 2rem;
+}
+
+h5 {
+ font-size: 1.75rem;
+}
+
+h6 {
+ font-size: 1.5rem;
 }
 
 p {
@@ -150,19 +161,22 @@ q:before, q:after {
 hr {
   display: block;
   height: 1px;
-  margin: 1rem 0;
+  margin: 3rem 0;
   padding: 0;
   border: 0;
   border-top: .5px solid $lightblue;
   background: $lightblue;
 }
 
-/* main content */
+// main content
 
 .page-container {
   width: 100%;
   margin: 0;
   padding: 0;
+  @include media(medium) {
+    flex-direction: column;
+  }
 }
 
 .main-content {
@@ -172,56 +186,23 @@ hr {
   max-width: 1100px;
   margin: 0;
   padding: 1rem 1rem 1rem 0;
+  @include media(medium) {
+    left: 0;
+    width: 100%;
+    padding-left: 1rem;
+    border-top: 1px solid $lightblue;
+  }
 }
 
 img {
   width: 100%;
-  background-color: #ddd;
+  background-color: $lightblue;
 }
 
 // helper classes
 
-.ir {
-  overflow: hidden;
-  *text-indent: -9999px;
-  background-color: transparent;
-  border: 0;
-}
-
-.ir:before {
-  content: "";
-  display: block;
-  width: 0;
-  height: 150%;
-}
-
 .hidden {
   display: none !important;
-  visibility: hidden;
-}
-
-.visuallyhidden {
-  clip: rect(0 0 0 0);
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  border: 0;
-}
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-  clip: auto;
-  position: static;
-  width: auto;
-  height: auto;
-  margin: 0;
-  overflow: visible;
-}
-
-.invisible {
   visibility: hidden;
 }
 
@@ -237,30 +218,4 @@ img {
 
 .clearfix {
   *zoom: 1;
-}
-
-// media queries
-
-@include media(medium) {
-
-  body {
-    margin-top: 0;
-  }
-
-  .page-container {
-    flex-direction: column;
-  }
-
-  .main-content {
-    left: 0;
-    width: 100%;
-    padding-left: 1rem;
-    border-top: 1px solid $lightblue;
-  }
-
-  .grid img {
-    width: 40%;
-    margin: 2%;
-  }
-
 }
