--- a/_scss/404.scss
+++ b/_scss/404.scss
@@ -7,6 +7,7 @@
 
 .broken-header {
   font-size: 50px;
+  color: $blue;
 }
 
 .broken-float {
@@ -16,13 +17,36 @@
 
 .broken-text {
   margin: 1rem 0;
-  font-size: 2rem;
+  font-size: 1.75rem;
 }
 
 .broken-link {
-  font-weight: 300;
+  display: inline-block;
   text-decoration: none;
+  position: relative;
+  z-index: 1;
+  padding-bottom: 4px;
+  font-weight: 300;
   color: $darkblue;
+  &:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: $aqua;
+    transition: all 0.2s ease-in-out 0s;
+    z-index: -10;
+  }
+  &:hover {
+    text-decoration: none;
+    background: none;
+    &:before {
+      width: 100%;
+      height: 36px;
+    }
+  }
 }
 
 .broken-link:hover {
