--- a/_scss/pages.scss
+++ b/_scss/pages.scss
@@ -14,6 +14,9 @@
 
 .grid {
   width: 90%;
+  @include media(medium) {
+    width: 100%
+  }
   img {
     display: inline-block;
     width: 120px;
@@ -24,14 +27,11 @@
       opacity: 0.8;
       filter: alpha(opacity=80);
     }
-    @include media(small) {
-      width: 100%
+    @include media(medium) {
+      width: 40%;
+      margin: 2%;
     }
   }
-}
-
-.caption {
-  width: 100%;
 }
 
 .work-list {
@@ -43,7 +43,60 @@
   }
 }
 
-.screenshot {
+.popup {
+  width: 60%;
+  .close {
+    float: right;
+    margin: 0 0 10px 0;
+    font-size: 1rem;
+    color: $darkblue;
+    cursor: pointer;
+    &:hover {
+      background-color: $aqua;
+    }
+  }
+  .large {
+    width: 100%;
+    cursor: pointer;
+    @include media(medium) {
+      width: 100%;
+    }
+  }
+  .explainer {
+    color: $darkblue;
+    a {
+      color: $blue;
+      &:hover {
+        background-color: $aqua;
+      }
+    }
+  }
+}
+
+.shorten {
+  width: 90%;
+}
+.top {
+  display: inline;
+  cursor: pointer;
+  &:hover {
+    background: $aqua;
+  }
+  @include media(medium) {
+    padding-bottom: 2rem;
+  }
+}
+
+// development
+
+.dev-title {
+  width: 100%;
+  h3 {
+    margin-bottom: 10px;
+  }
+}
+
+.dev-screenshot {
   width: 100%;
   margin: 2rem 0 0 0;
   a {
@@ -57,62 +110,19 @@
   }
 }
 
-.popup {
-  width: 60%;
-}
-
-.close {
-  float: right;
-  margin: 0;
-  font-size: 1rem;
-  color: $darkblue;
-  cursor: pointer;
-  &:hover {
-    background-color: $aqua;
-  }
-}
-
-.large {
-  width: 100%;
-  cursor: pointer;
-}
-
-.explainer {
-  color: $darkblue;
-  a {
-    color: $blue;
-    &:hover {
-      background-color: $aqua;
-    }
-  }
-}
-
-.shorten {
-  width: 90%;
-}
-
-.top {
-  display: inline;
-  cursor: pointer;
-  &:hover {
-    background: $aqua;
-  }
-}
-
 // talks
 
 .talk-list-item {
+  &:not(:last-of-type) {
+    margin-bottom: 2rem;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid $lightblue;
+  }
   @include mediaMin(medium) {
     p {
       width: 80%;
     }
   }
-}
-
-.talk-list-item:not(:last-of-type) {
-  margin-bottom: 2rem;
-  padding-bottom: 2rem;
-  border-bottom: 1px solid $lightblue;
 }
 
 .talk-title {
@@ -129,27 +139,29 @@
   font-size: 80%;
 }
 
-.notes {
-  width: 80%;
-  padding: 25px 0 0 0;
+.notes-content {
+  width: 100%;
+  max-width: 800px;
+  margin-bottom: 100px;
   h4 {
+    padding-top: 30px;
     padding-bottom: 15px;
   }
   p {
     padding-bottom: 15px;
   }
+  .slide-label {
+    color: $lesslightblue;
+  }
 }
 
-/* media queries */
+// everything else
 
-@include media(medium) {
+.sketchbook-content {
+  margin: 10px 0;
+}
 
-  .large {
-    width: 100%;
-  }
-
-  .top {
-    padding-bottom: 2rem;
-  }
-
+.sketchbook-link {
+  margin: 0 0 0 20px;
+  @include link-with-animation;
 }
