--- a/_scss/resume.scss
+++ b/_scss/resume.scss
@@ -1,27 +1,23 @@
 // resume
 
 .pdf-link {
-  text-transform: lowercase;
-  letter-spacing: 0;
+  @include link-with-animation;
 }
 
-.pdf-link:hover {
-  background-color: $aqua;
-}
-
-.resume-format {
+.resume-content {
   width: 100%;
-  max-width: 550px;
-
-}
-
-.resume-shim {
-  height: 10px;
+  max-width: 800px;
+  margin-bottom: 100px;
 }
 
 .resume-header {
-  margin: 2rem 0 0 0;
+  margin: 30px 0 10px 0;
   font-weight: 400;
+}
+
+.margin-top-lg {
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
 
 .resume-subheader {
@@ -30,7 +26,7 @@
 }
 
 .resume-ul li {
-  margin-top: 1rem;
+  margin-top: 10px;
   padding-left: 1rem;
   list-style: none;
   border-left: 2px solid $lesslightblue;
