--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,8 @@
   <link href="/assets/img/favicon.png" rel="shortcut icon" type="image/x-icon">
   {% if page.url == "/rrbc" %}
     <link href="/assets/css/rrbc.css" rel="stylesheet">
+  {% elsif page.url == "/hiit" %}
+    <link href="/assets/css/hiit.css" rel="stylesheet">
   {% else %}
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" rel=stylesheet type="text/css">
