--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,5 +16,6 @@
     <link href="/assets/css/normalize.min.css" rel="stylesheet">
     <link href="/assets/css/main.css" rel="stylesheet">
   {% endif %}
-  <script src="/assets/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+  <!-- <script src="/assets/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script> -->
+  <script src="/assets/js/vendor/test1.js"></script>
 </head>
