--- a/_scss/index.scss
+++ b/_scss/index.scss
@@ -3,9 +3,12 @@
 @import 'pages';
 @import 'nav';
 @import 'footer';
+
 @import 'home';
 @import 'about';
 @import 'favorite-things';
 @import 'resume';
+@import 'drinks';
+
 @import '404';
 @import 'print';
