--- a/_layouts/drinks.html
+++ b/_layouts/drinks.html
@@ -7,7 +7,7 @@
     <![endif]-->
 
     <main class="drinks-wrapper">
-      <h1 class="drinks-title">Drinks</h1>
+      <h1 class="drinks-title">Here, Drink This</h1>
       <ol class="drinks-list">
         <li class="drinks-list-item"><a href="https://thecrookedcarrot.com/winter-cranberry-spritz/">Winter Cranberry Spritz</a></li>
         <li class="drinks-list-item"><a href="https://www.foodandwine.com/recipes/almond-fennel-cooler">Almond Fennel Cooler</a></li>
