--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
     <nav class="desktop-menu">
       <ul id="menu" class="nav-ul">
         <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="/work">Work</a></li>
+        <li class="nav-item"><a class="nav-link" href="/">Work (coming soon)</a></li>
         <br>
         <li class="nav-item"><a class="nav-link" href="https://github.com/ChrisBup" target="_blank" rel="noopener">GitHub</a></li>
         <li class="nav-item"><a class="nav-link" href="https://codepen.io/ChrisBup" target="_blank" rel="noopener">CodePen</a></li>
@@ -26,8 +26,8 @@
   </div>
   <nav class="mobile-menu">
     <ul>
-      <li><a class="nav-link" href="about.html">About</a></li>
-      <li><a class="nav-link" href="work.html">Work</a></li>
+      <li><a class="nav-link" href="/about">About</a></li>
+      <li><a class="nav-link" href="/work">Work (coming soon)</a></li>
       <li class="mobile-social">
         <div class="icons1">
           <span><a class="nav-link" href="https://github.com/ChrisBup" target="_blank" rel="noopener"><i class="fab fa-github"></i></a></span>
