--- a/_scss/about.scss
+++ b/_scss/about.scss
@@ -56,10 +56,8 @@
 
 .about-content {
   margin-top: 60px;
+  padding-top: 40px;
   border-top: 2px solid $blue;
-  p {
-    margin: 40px 0 20px 0;
-  }
 }
 .spotify-svg-wrapper {
   overflow: hidden;
